test/testdata/classes/methods/this_outside_method_error.lox
// error: 'this' can only be used inside a method definition
// lint error: 'this' can only be used inside a method definition
print this;
